--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "platformio/gfx-fonts"]
 	path = platformio/gfx-fonts
-	url = https://gitlab.com/tissen-esp/gfx-fonts.git
+	url = git@gitlab.com:tissen-esp/gfx-fonts.git
